# CogniVoice

./: .gitattributes  .gitignore  README.md
assets/: README.md
cognivoice/: .env  pubspec.yaml
cognivoice/android/app/: build.gradle
cognivoice/ios/Runner/: Info.plist
cognivoice/lib/: main.dart
cognivoice/lib/screens/: home.dart
cognivoice/lib/services/: speechToText.service.dart
cognivoice/lib/utils/: convertAudio.util.dart
cognivoice/linux/: CMakeLists.txt  my_application.cc
cognivoice/macos/Runner/: Info.plist
cognivoice/macos/Runner.xcodeproj/: project.pbxproj
cognivoice/web/: index.html
cognivoice/windows/: CMakeLists.txt
docs/: README.md  deploy.md  index.md
src/: README.md  docker-compose.yml
src/BackEnd/: .gitignore  Dockerfile  index.js  package.json
src/BackEnd/audios/: audio_teste.m4a  receiving.m4a
src/BackEnd/controllers/: chat.js  user.js
src/BackEnd/database/: cognivoice.db  cognivoice.db-journal
src/BackEnd/prisma/: schema.prisma
src/BackEnd/routes/: chat.js  user.js
src/BackEnd/services/: chat.js  user.js
src/BackEnd/tests/: user.test.js
src/BackEnd/utils/: ffmpeg.js  gpt.js  ibm.js  mongo.js  sendAlert.js
src/alert-backend/: Dockerfile  index.js  package.json
src/backend-url/controllers/: url.js
src/cognivoice/: .gitignore  README.md  pubspec.yaml
src/logger-api/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
src/logger-api/src/: main.rs
src/natural_language_processing/: ibm_db.csv  pln_CogniVoice.ipynb  pln_cognivoice.py  requirements.txt
tests/: README.md
(+52 files in other folders)
