[package]
name = "logger-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "logger-api"
path = "src/main.rs"

[dependencies]
once_cell = "1.17.*"
ahash = "0.8"
actix-cors = "0.6.4"
actix-web = "4.2.1"
chrono = { version = "0.4.23", features = ["serde"] }
# env_logger = "0.10.0"
env_logger = "0.9.3"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }
csv = "1.1"

[net]
git-fetch-with-cli = true
